fix: indexTiles page overflow

--- a/src/components/storyblok/index-tiles/index-tiles.module.sass
+++ b/src/components/storyblok/index-tiles/index-tiles.module.sass
@@ -1,6 +1,6 @@
 .indexTiles
   width: 100%
-  height: calc(100vh - var(--header-size))
+  height: calc(100svh - var(--header-size))
 
   &_Grid
     display: grid
